replace quotation symbols

--- a/paper/1_Initial/manuscript.qmd
+++ b/paper/1_Initial/manuscript.qmd
@@ -2,7 +2,7 @@
 title: "Meta-analysis of the Interoceptive Accuracy Scale (IAS) Structure and its Subjective Correlates"
 shorttitle: "IAS Factor structure and correlates"
 author:
-  - name: Magda Pfaff
+  - name: Magdalena Pfaff
     corresponding: true
     orcid: 0009-0006-2386-7936
     # roles: 
@@ -104,9 +104,11 @@ format:
     documentmode: man
 ---
 
-Interoception is referred to the process of sensing, interpreting and integrating information pertaining to internal organs, such as the heart, the lungs or the gut [@khalsa2018]. While recent research emphasizes a key role of interoception in a variety of processes (e.g., emotion regulation, decision making) and of outcomes (physical and psychological well being), the field remains clouded by concerns pertaining to how interoception is assessed. 
+<!-- Interoception definition -->
+Interoception is referred to the process of sensing, interpreting and integrating information pertaining to internal organs, such as the heart, the lungs or the gut [@khalsa2018]. While recent research emphasizes a key role of interoception in a variety of processes (e.g., emotion regulation, decision making) and of outcomes (physical and psychological well being), the field remains clouded by concerns pertaining to how interoception is assessed.
 
-Various measures of interoception have been developed, forming a combination of “objective” and “subjective” assessments (i.e., physiological tasks such as the heart beat counting or tracking vs. questionnaires and subjective scales involving a metacognitive reflection), “implicit” or “explicit” paradigms (i.e., directing participant’s awareness and attention to interoceptive processes), various interoceptive modalities (e.g., cardioception, respiroception, gastroception) and theoretical dimensions (e.g., sensitivity, awareness, or accuracy) (see figure 1). While there is no consensus as to which particular approach provides the most accurate and “pure” measure of interoception and interoceptive abilities (assuming it is a unidimensional construct), it is instead plausible that each measure has strengths and limitations, and a utility dependent on the context and goal at hand [@jahedi2014].
+<!-- Interocetpion measure -->
+Various measures of interoception have been developed, forming a combination of "objective" and "subjective" assessments (i.e., physiological tasks such as the heart beat counting or tracking vs. questionnaires and subjective scales involving a metacognitive reflection), "implicit" or "explicit" paradigms (i.e., directing participant’s awareness and attention to interoceptive processes), various interoceptive modalities (e.g., cardioception, respiroception, gastroception) and theoretical dimensions (e.g., sensitivity, awareness, or accuracy) (see figure 1). While there is no consensus as to which particular approach provides the most accurate and "pure" measure of interoception and interoceptive abilities (assuming it is a unidimensional construct), it is instead plausible that each measure has strengths and limitations, and a utility dependent on the context and goal at hand [@jahedi2014].
 
 For instance, while the use of self-reports questionnaires might seem at odds with the concept of interoception (appearing at first as a deeply embodied - almost non-cognitive - sensory function), recent redefinitions of interoception, emphasizing the role of high-level and metacognitive elaboration of interoceptive information, has provided the theoretical grounding to support the hypothesis that facets of interoception can be assessed with subjective measures [@murphy2019]. It is important to note that subjective interoceptive measures yield different results depending on which aspect of interoception is investigated, such as interoceptive attention compared to interoceptive accuracy [@murphy2019]. The present paper focuses on interoceptive accuracy. Moreover, the current subjective measures do not correlate well with the objective measures [@murphy2019] . Nonetheless, measuring interoception subjectively is highly useful, as it indicates the participants’ view of their own interoceptive abilities.
 
@@ -114,9 +116,9 @@ For instance, while the use of self-reports questionnaires might seem at odds wi
 
 ### Introducing the IAS
 
-A recently developed scale with a rapidly growing popularity is the Interoceptive Accuracy Scale [IAS; @murphy2019]. The IAS consists of 21 Likert-scale items that query how accurately one can perceive different bodily signals, with one item per physiological mechanism such as respiration (“I can always accurately perceive when I am breathing fast”), heart (e.g “I can always accurately perceive when my heart is beating fast”), skin (e.g “I can always accurately perceive when something is going to be ticklish”), arousal or bodily functions like coughing (e.g “I can always accurately perceive when I am going to cough”), urinating (e.g. “I can always accurately perceive when I need to urinate”), etc. Interestingly, the IAS states specific examples, rather than broad claims, which is different to other interoception questionnaires, such as the multidimensional assessment of interoceptive awareness [MAIA, @mehling2012].
+A recently developed scale with a rapidly growing popularity is the Interoceptive Accuracy Scale [IAS; @murphy2019]. The IAS consists of 21 Likert-scale items that query how accurately one can perceive different bodily signals, with one item per physiological mechanism such as respiration ("I can always accurately perceive when I am breathing fast"), heart (e.g "I can always accurately perceive when my heart is beating fast"), skin (e.g "I can always accurately perceive when something is going to be ticklish"), arousal or bodily functions like coughing (e.g "I can always accurately perceive when I am going to cough"), urinating (e.g. "I can always accurately perceive when I need to urinate"), etc. Interestingly, the IAS states specific examples, rather than broad claims, which is different to other interoception questionnaires, such as the multidimensional assessment of interoceptive awareness [MAIA, @mehling2012].
 
-Since its original publication, several studies have investigated the structure and validity of the IAS. @murphy2019 indicated a two-factor solution, measuring direct interoceptive signals, such as cardioception, and secondly, rather indirect factors such as bruising, which cannot be perceived by interoceptive signals alone. While the fit of the two-factor solution is passable, the fit was not perfect and requires further examination. In contrast, other studies have found unidimensional one-factor structures to be the best fit for the IAS ([@lin2023; @campos2021; @brand2023]. However, @lin2023 also elaborate that their correlation analysis showed five locally dependent pairs in three items with exceptionally high difficulty and low discrimination making them subjects for reduction, proposing a shortened version of the IAS (IAS-SF) with 12 items, while @campos2021 found that item “tickle” is representing a more specific, rather than a general factor, they argue that all items should be retained, given that items for the IAS are largely associated with interoceptive information. Interestingly, @brand2023 analyzed data of four different translations (all in German) of the IAS, some of which were more formal, but did not find any significant differences between the different versions. The IAS in the given studies were done in Chinese, Portuguese and in German, respectively. All mentioned recent studies indicate good psychometric measures with good test-retest reliability of the IAS.
+Since its original publication, several studies have investigated the structure and validity of the IAS. @murphy2019 indicated a two-factor solution, measuring direct interoceptive signals, such as cardioception, and secondly, rather indirect factors such as bruising, which cannot be perceived by interoceptive signals alone. While the fit of the two-factor solution is passable, the fit was not perfect and requires further examination. In contrast, other studies have found unidimensional one-factor structures to be the best fit for the IAS ([@lin2023; @campos2021; @brand2023]. However, @lin2023 also elaborate that their correlation analysis showed five locally dependent pairs in three items with exceptionally high difficulty and low discrimination making them subjects for reduction, proposing a shortened version of the IAS (IAS-SF) with 12 items, while @campos2021 found that item "tickle" is representing a more specific, rather than a general factor, they argue that all items should be retained, given that items for the IAS are largely associated with interoceptive information. Interestingly, @brand2023 analyzed data of four different translations (all in German) of the IAS, some of which were more formal, but did not find any significant differences between the different versions. The IAS in the given studies were done in Chinese, Portuguese and in German, respectively. All mentioned recent studies indicate good psychometric measures with good test-retest reliability of the IAS.
 
 Several measures have been used to assess convergent validity for the the IAS, including alexithymia, or neuroticism, or other interoception scales, such as the MAIA, which have previously correlated and used to validate each other [@brand2023]. Recent findings by @campos2021 suggest a significant positive correlation between the BPQ Body Awareness (BPQ-BA) and the IAS, which contradict @murphy2019 findings of the 2x2 factorial model of interoception, in which attention and accuracy are conceptualized as dissociable interoceptive dimensions. 
 
@@ -163,7 +165,7 @@ To examine the factor structure of the IAS, a two-step approach was employed. Fi
 
 # Results
 
-Visualizing the distribution of the items for all samples suggests the presence of a consistent modal value (Fig. X). In other words,  participants are most likely to answer 4/5 (i.e., agree) on most items (but “affective touch”, “blood sugar”, and “bruise” that exhibit a different distributional pattern). Additionally, one can note the low density on extreme values (1 and 5), meaning that the bulk of answers **(87% TODO: get the actual statistic: what’s the proportion of non 1&5 answers for the likert scale samples)** varies between 3 values. The interindividual variability seems improved in the samples using an analogue scale, displaying a more continuous and progressive spread of answers.
+Visualizing the distribution of the items for all samples suggests the presence of a consistent modal value (Fig. X). In other words,  participants are most likely to answer 4/5 (i.e., agree) on most items (but "affective touch", "blood sugar", and "bruise" that exhibit a different distributional pattern). Additionally, one can note the low density on extreme values (1 and 5), meaning that the bulk of answers **(87% TODO: get the actual statistic: what’s the proportion of non 1&5 answers for the likert scale samples)** varies between 3 values. The interindividual variability seems improved in the samples using an analogue scale, displaying a more continuous and progressive spread of answers.
 
 ![**Figure 1.** Distribution of responses for all items across all datasets.](images/clipboard-1080495164.png){width="723"}
 
@@ -173,13 +175,13 @@ The correlation analysis revealed that the items overall have positive intercorr
 
 ### EGA
 
-The unique variable analysis revealed that there are two redundant variables when taking all samples into account. Namely, “itch” and “tickle”, where “tickle” should be removed, and “itch” should remain in the questionnaire. There are several more items that are moderately to largely redundant, namely, “wind” and “burp”, and “urinate” and “defecate”. On top of that, “sneeze" and “cough”, “heart” and “breathing”, and “hungry” and “thirsty” seem to have small to moderate redundancy. These findings are rather consistent across the samples with minor differences, such as that when the questionnaire had an analog scale, there seems to be no redundant items. 
+The unique variable analysis revealed that there are two redundant variables when taking all samples into account. Namely, "itch" and "tickle", where "tickle" should be removed, and "itch" should remain in the questionnaire. There are several more items that are moderately to largely redundant, namely, "wind" and "burp", and "urinate" and "defecate". On top of that, "sneeze" and "cough", "heart" and "breathing", and "hungry" and "thirsty" seem to have small to moderate redundancy. These findings are rather consistent across the samples with minor differences, such as that when the questionnaire had an analog scale, there seems to be no redundant items. 
 
 According to the network analysis, a 4-factor structure fits the questionnaire best across all data sets. This is rather consistent within the data sets, where some samples indicate 3-factor structure, and some a 5-factor structure would fit well too. The 4-factor structure model with the best fit entails the following items per group: 1) itch, tickle, bruise, blood sugar; 2) burp, wind, cough, sneeze, vomit; 3) affective touch, sexual arousal, muscles, temperature, pain, and taste; 4) Heart, breathing, hungry, thirsty, urinate, and defecate.
 
 Stability analysis, employing 500 bootstrap iterations, also favoured the 4-factor solution for its greater stability. Most items, except for 'affective touch,' demonstrated stability levels exceeding 0.70, indicating structural consistency and reliability [@christensen2021]. These findings underscore the robustness of the identified 4-dimensional structure.
 
-When accounting for all samples, the factor analysis reveals that a 4-factor structure fits best. The exploratory factor analysis revealed that 4 latent factors (oblimin rotation) accounted for 41.67% of 5the total variance of the original data (MR1 = 14.64%, MR3 = 11.59%, MR4 = 7.30%). Confirmatory factor analysis showed that the time “tickle” can be discarded, as it was flagged as redundant in the samples consistently. Some of the factors were ambiguous, namely, temperature, vomit, effective touch, sexual arousal, as well as taste. There was no evidence for higher order factors.
+When accounting for all samples, the factor analysis reveals that a 4-factor structure fits best. The exploratory factor analysis revealed that 4 latent factors (oblimin rotation) accounted for 41.67% of 5the total variance of the original data (MR1 = 14.64%, MR3 = 11.59%, MR4 = 7.30%). Confirmatory factor analysis showed that the time "tickle" can be discarded, as it was flagged as redundant in the samples consistently. Some of the factors were ambiguous, namely, temperature, vomit, effective touch, sexual arousal, as well as taste. There was no evidence for higher order factors.
 
 # Discussion
 
@@ -245,9 +247,9 @@ Correlations will be computed using the correlation package under a Bayesian fra
 
 ## Results
 
-The EGA components capture groupings of pairs of items, such as “wind” and “burp”, “cough” and “sneeze”, or “muscle” and “pain”. These groupings were used in the correlational analysis, to observe how much each group/pair correlates with other factors, such as Alexithymia, or the MAIA (see Figure 2).
+The EGA components capture groupings of pairs of items, such as "wind" and "burp", "cough" and "sneeze", or "muscle" and "pain". These groupings were used in the correlational analysis, to observe how much each group/pair correlates with other factors, such as Alexithymia, or the MAIA (see Figure 2).
 
-Alexithymia is negatively correlated with all interoceptive groups. Autistic traits are mostly negatively correlated with IAS measure, except for patterns and numbers (as an autistic trait), which is significantly and positively correlated with the “itch/bruise” pairing. The BPQ Body Awareness part is positively correlated with all IAS pairs, whereas the Autonomic Reactivity part is negatively correlated with all IAS groupings. Conspiracy Beliefs were all positively correlated with the IAS pairs, however, only Global Conspiracy with “hungry/thirsty”, “urinate/defecate” and “cough/sneeze”, as well as personal wellbeing with “hungry/thirsty”, and Information Control with “cough/sneeze” were significantly positively correlated. Demographic data is also mostly positively correlated with the IAS findings, where gender and age more strongly correlated with “hungry/thirsty”. In this analysis, lying profile is not strongly correlated with the IAS; Except for contextuality, which shows a significant negative correlation with “itch/bruise”. The MAIA has a strong positive correlation with most IAS pairings, except for the “not worrying” and “not distracting” items of the MAIA, which show less strong, or even negative correlations with all IAS item pairings. Maladaptiveness had mostly negative correlations with the IAS, with only a few significant correlations, namely “psychoticism”, “negative affect”, and “detachment” with “muscle/pain” and “hungry/thirsty”, as well as “negative affect” with “wind/burp”. Overall, mood was mostly negatively correlated with the IAS, where “hungry/thirsty” had the strongest negative correlation of all mood measures. Except for “neuroticism” and “honesty-humility”, personality traits, such as “openness” and “extraversion” were positively correlated with the IAS groupings. Shizotypic traits were mostly negatively correlated with the IAS, with “hungry/thirsty” showing the strongest negative correlation between schizotypic and the IAS. World beliefs were mostly positively correlated with the IAS, however, only a few were significant: “hierarchical”, “enticing”, and “alive” correlates significantly with “muscle/pain”; “Understandable” has a significant positive correlation with “heart/breathing”; And  “hierarchical” and “alive” has a significant positive correlation with “hungry/thirsty”. 
+Alexithymia is negatively correlated with all interoceptive groups. Autistic traits are mostly negatively correlated with IAS measure, except for patterns and numbers (as an autistic trait), which is significantly and positively correlated with the "itch/bruise" pairing. The BPQ Body Awareness part is positively correlated with all IAS pairs, whereas the Autonomic Reactivity part is negatively correlated with all IAS groupings. Conspiracy Beliefs were all positively correlated with the IAS pairs, however, only Global Conspiracy with "hungry/thirsty", "urinate/defecate" and "cough/sneeze", as well as personal wellbeing with "hungry/thirsty", and Information Control with "cough/sneeze" were significantly positively correlated. Demographic data is also mostly positively correlated with the IAS findings, where gender and age more strongly correlated with "hungry/thirsty". In this analysis, lying profile is not strongly correlated with the IAS; Except for contextuality, which shows a significant negative correlation with "itch/bruise". The MAIA has a strong positive correlation with most IAS pairings, except for the "not worrying" and "not distracting" items of the MAIA, which show less strong, or even negative correlations with all IAS item pairings. Maladaptiveness had mostly negative correlations with the IAS, with only a few significant correlations, namely "psychoticism", "negative affect", and "detachment" with "muscle/pain" and "hungry/thirsty", as well as "negative affect" with "wind/burp". Overall, mood was mostly negatively correlated with the IAS, where "hungry/thirsty" had the strongest negative correlation of all mood measures. Except for "neuroticism" and "honesty-humility", personality traits, such as "openness" and "extraversion" were positively correlated with the IAS groupings. Shizotypic traits were mostly negatively correlated with the IAS, with "hungry/thirsty" showing the strongest negative correlation between schizotypic and the IAS. World beliefs were mostly positively correlated with the IAS, however, only a few were significant: "hierarchical", "enticing", and "alive" correlates significantly with "muscle/pain"; "Understandable" has a significant positive correlation with "heart/breathing"; And  "hierarchical" and "alive" has a significant positive correlation with "hungry/thirsty". 
 
 ![**Figure 2.** Correlates of the IAS](images/clipboard-1619164537.png){width="911"}
 
